--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -28,7 +28,8 @@ input[type="submit"],
 #page input[type="button"],
 #add_other input[type="button"],
 ul.alliance_attack_claims_list a,
-#currentMoves a {
+#currentMoves a,
+#alliance_menu a {
   display: inline-block;
   height: 1.5rem;
   margin: 1rem 0;
