--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -30,7 +30,7 @@
 	border-radius: 6px;
 
 	&:active {
-	  background: linear-gradient(135deg, #598aad 0%, #000000 100%);
+	  background: linear-gradient(135deg, #598aad 0%, #000 100%);
 	}
   }
 }
@@ -45,11 +45,17 @@
 	width: auto;
 	margin: 0 auto;
 
-	td,
-	th {
+	th,
+	td {
 	  &:first-child {
 		text-align: left;
 		padding: .15rem 2rem;
+	  }
+	}
+
+	td {
+	  &:last-child {
+		text-align: center;
 	  }
 	}
 
@@ -77,7 +83,6 @@
 	}
   }
 }
-
 
 #page_population {
   .container {
