--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -23,7 +23,7 @@
           }
 
           .ally_def_target_toggle_link {
-            margin: 0 .5rem 0 -18px;
+            margin: 0 -1px 0 -11px;
             width: 10px;
             cursor: pointer;
 
