--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -13,11 +13,12 @@
 	  .ally_def_incs_wrapper {
 		margin: 0 0 2rem 5px;
 		background: $color-secondary;
-		border: 1px solid rgba($color-primary, .3);
+		border: 1px solid rgba($color-primary, .18);
+		box-shadow: 0px 1px 2px 1px rgba(black, 0.3);
 
 		.ally_def_target {
 		  font-size: 1rem;
-		  border-bottom: 1px solid rgba($color-primary, .2);
+		  border-bottom: 1px solid rgba(black, .5);
 
 		  > div {
 			display: flex;
