--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -64,7 +64,7 @@
   display: flex;
   flex-wrap: wrap;
   border: none;
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   position: relative;
 
   .construction_info {
