--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -8,10 +8,10 @@
 
   .tablesort {
 	thead {
-	  background: $color-secondary;
+	  background: $color-background;
 
 	  th {
-		padding: 10px 4px;
+		padding: 2px 5px;
 
 		&.tablesort_asc,
 		&.tablesort_desc {
@@ -57,6 +57,20 @@
 			&.mod {
 			  color: $color-mod;
 			}
+		  }
+		}
+	  }
+	}
+
+	tfoot {
+	  tr {
+		&:nth-child(1) {
+		  display: none;
+		}
+
+		&:nth-child(2) {
+		  td {
+			background: $color-bg-th;
 		  }
 		}
 	  }
