--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -85,9 +85,8 @@
 		&:first-child {
 		  td {
 			background: transparent;
-			font-weight: bold;
-			font-size: 1.2rem;
-			padding-bottom: 1rem;
+			padding: .5rem;
+			font-style: italic;
 		  }
 		}
 	  }
