--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -96,7 +96,7 @@ h2 {
   .maintext {
 	text-align: center;
 	padding: 0;
-	font-size: .9rem;
+	font-size: $text-default;
 
 	a {
 	  font-weight: normal;
