--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -35,11 +35,11 @@ ul.alliance_attack_claims_list a,
   margin: 1rem 0;
   padding: 0 .5rem;
   color: $color-primary !important;
-  background: $color-secondary !important;
+  background: rgba($color-secondary, .4) !important;
   border: 1px solid rgba($color-primary, .5) !important;
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   cursor: pointer;
-  box-shadow: none;
-  border-radius: 0;
+  border-radius: 3px;
   text-transform: initial;
   font-weight: initial;
   transition: .3s;
