--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -15,15 +15,17 @@ input,
 textarea,
 select,
 .checkbox {
-  font-family: "Ubuntu", "Lato", "Open Sans", sans-serif;
-  background-color: $color-secondary;
+  font-family: $font-default;
+  background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   color: $color_text;
   font-size: 1rem;
   height: 1.5rem;
   transition: ease all .3s;
   display: inline-block;
   vertical-align: middle;
+  border-radius: 3px;
 
   &:focus {
 	outline: none;
@@ -32,12 +34,17 @@ select,
 }
 
 input[type="radio"] {
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   vertical-align: -7px;
 }
 
 option {
-  font-family: "Ubuntu", "Lato", "Open Sans", sans-serif;
-  background-color: $color-secondary;
+  font-family: $font-default;
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   color: $color-text;
 }
 
@@ -45,9 +52,11 @@ input[type="text"],
 input[type="number"],
 input[type="email"],
 input[type="password"] {
-  padding: .25rem !important;
+  padding: .25rem;
   color: $color_text;
-  background-color: $color-secondary;
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
 }
 
 
@@ -60,7 +69,9 @@ input[type="checkbox"] {
   appearance: none;
   width: 1rem;
   height: 1rem;
-  background-color: $color-secondary;
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   cursor: pointer;
   outline: none;
   transition: .3s;
@@ -78,8 +89,10 @@ input[type="checkbox"] {
 
 input[type="checkbox"],
 select {
-  background-color: $color-secondary !important;
-  color: $color_text !important;
+  color: $color_text;
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
 }
 
 .checkbox > input:active {
@@ -91,5 +104,5 @@ textarea {
 }
 
 .mceEditorIframe {
-  min-height: 150px !important;
+  min-height: 150px;
 }
