--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -49,7 +49,7 @@ p,
 td,
 th,
 input {
-  font-family: "Ubuntu", "Lato", "Open Sans", sans-serif;
+  font-family: $font-default;
   font-size: 1rem;
   line-height: 1.4;
 }
