--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -53,3 +53,4 @@ $color-progress-expected: rgba(#FAC05E, .4);
 
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 $font-retro: 'VT323', monospace;
+$font-default: "Ubuntu", "Lato", "Open Sans", sans-serif;
