--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -54,6 +54,14 @@
 	  td {
 		background: $color-secondary;
 
+		input.input_coords {
+		  margin-right: 5px;
+
+		  &:last-child {
+			margin-right: 0;
+		  }
+		}
+
 		&:empty {
 		  background: transparent;
 		}
@@ -197,6 +205,7 @@ th.superhighlight {
 
 	  a {
 		font-size: $text-default;
+
 		&[class*="d_fleet_"] {
 		  padding: .25rem .5rem;
 		}
