--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -50,6 +50,7 @@ ul.alliance_attack_claims_list a,
 	text-decoration: none !important;
 	color: black !important;
 	background: $color-primary !important;
+	box-shadow: none;
   }
 }
 
